--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!doctype html>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US" >
   <head>
@@ -24,7 +21,7 @@
 <meta itemprop="name" content="Lee Ji-hye - 이지해"/>
 <meta itemprop="url" content="https://www.ellenvonunwerth.com"/>
 <meta itemprop="description" content="Lee Ji-hye - 이지해 website  ©Lee Ji-hye - 이지해"/>
-<meta name="twitter:title" content="Ellen von Unwerth"/>
+<meta name="twitter:title" content="Lee Ji-hye - 이지해"/>
 <meta name="twitter:url" content="https://www.ellenvonunwerth.com"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:description" content="Lee Ji-hye - 이지해 website  ©Lee Ji-hye - 이지해"/>
@@ -86,11 +83,11 @@ text-shadow: 0px 0px 7px
     <div class="sqs-slice" data-slice-type="heading" data-compound-type="logo" data-slice-id="5dc572ab88a93e0013ad5a33" data-content-empty="true"></div>
 
     <div class="sqs-slice-group group-copy">
-      <div class="sqs-slice" data-slice-type="heading" data-slice-id="5dc572ab88a93e0013ad5a31"><h1 id="sqs-slash-page-header">Ellen von Unwerth</h1>
+      <div class="sqs-slice" data-slice-type="heading" data-slice-id="5dc572ab88a93e0013ad5a31"><h1 id="sqs-slash-page-header">Lee Ji-hye - 이지해</h1>
 </div>
       <div class="sqs-slice" data-slice-type="body" data-slice-id="5dc572ab88a93e0013ad5a32"><p class="" style="white-space:pre-wrap;">COMING SOON</p></div>
       <div class="responsive-wrapper actions">
-        <div class="sqs-slice" data-slice-type="custom-form" data-slice-id="5de013ea305b2260c98b39df" data-content-empty="true"></div><div class="sqs-slice" data-slice-type="navigation" data-compound-type="action" data-slice-id="5dc572c788a93e0013ad5d16"><ul><li><a href="mailto:info@ellenvonunwerth.com" >info@ellenvonunwerth.com</a></li></ul></div>
+        <div class="sqs-slice" data-slice-type="custom-form" data-slice-id="5de013ea305b2260c98b39df" data-content-empty="true"></div><div class="sqs-slice" data-slice-type="navigation" data-compound-type="action" data-slice-id="5dc572c788a93e0013ad5d16"><ul><li><a href="mailto:info@leejihey.com" >info@leejihey.com</a></li></ul></div>
       </div>
     </div>
 
